--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 header {
-    width: 100vw;
+    width: 100%;
     height: 100px;
     background-color: white;
     display: flex;
